Fix encourage resource industry decree

--- a/localization/l_russian.yml
+++ b/localization/l_russian.yml
@@ -42,23 +42,25 @@
   pmg_synthetic_rubber:2 "$pm_base$"
   pmg_synthetic_fuel:2 "$pm_base$"
   pmg_automation_building_automobile_factories:2 "$pmg_automation_building_motor_industry$"
-  modifier_building_distillery_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] рудников"
-  modifier_building_distillery_throughput_add_desc:2 "Бонус или штраф к потреблению и производству на плантациях."
-  modifier_building_tailoring_workshop_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] рудников"
-  modifier_building_tailoring_workshop_throughput_add_desc:2 "Бонус или штраф к потреблению и производству на плантациях."
-  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] рудников"
-  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 "Бонус или штраф к потреблению и производству на плантациях."
-  modifier_building_pottery_mills_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] рудников"
-  modifier_building_pottery_mills_throughput_add_desc:2 "Бонус или штраф к потреблению и производству на плантациях."
-  modifier_building_rayon_plants_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] рудников"
-  modifier_building_rayon_plants_throughput_add_desc:2 "Бонус или штраф к потреблению и производству на плантациях."
-  modifier_building_automobile_factories_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] рудников"
-  modifier_building_automobile_factories_throughput_add_desc:2 "Бонус или штраф к потреблению и производству на плантациях."
-  modifier_building_aircraft_industry_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] рудников"
-  modifier_building_aircraft_industry_throughput_add_desc:2 "Бонус или штраф к потреблению и производству на плантациях."
-  modifier_building_radio_industry_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] рудников"
-  modifier_building_radio_industry_throughput_add_desc:2 "Бонус или штраф к потреблению и производству на плантациях."
-  modifier_building_fruit_orchard_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] рудников"
-  modifier_building_fruit_orchard_throughput_add_desc:2 "Бонус или штраф к потреблению и производству на плантациях."
-  modifier_building_wool_farms_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] рудников"
-  modifier_building_wool_farms_throughput_add_desc:2 "Бонус или штраф к потреблению и производству на плантациях."
+  modifier_building_distillery_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_distillery$"
+  modifier_building_distillery_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_distillery$."
+  modifier_building_tailoring_workshop_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_tailoring_workshop$"
+  modifier_building_tailoring_workshop_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_tailoring_workshop$."
+  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_luxury_furniture_manufacturies$"
+  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_luxury_furniture_manufacturies$."
+  modifier_building_pottery_mills_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_pottery_mills$"
+  modifier_building_pottery_mills_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_pottery_mills$."
+  modifier_building_rayon_plants_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_rayon_plants$"
+  modifier_building_rayon_plants_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_rayon_plants$."
+  modifier_building_automobile_factories_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_automobile_factories$"
+  modifier_building_automobile_factories_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_automobile_factories$."
+  modifier_building_aircraft_industry_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_aircraft_industry$"
+  modifier_building_aircraft_industry_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_aircraft_industry$."
+  modifier_building_radio_industry_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_radio_industry$"
+  modifier_building_radio_industry_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_radio_industry$."
+  modifier_building_fruit_orchard_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_fruit_orchard$"
+  modifier_building_fruit_orchard_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_fruit_orchard$."
+  modifier_building_wool_farms_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_wool_farms$"
+  modifier_building_wool_farms_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_wool_farms$."
+  building_group_bg_hardwood_logging_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_hardwood_logging_camp$"
+  building_group_bg_hardwood_logging_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_hardwood_logging_camp$"
