--- a/localization/l_braz_por.yml
+++ b/localization/l_braz_por.yml
@@ -62,3 +62,5 @@
   modifier_building_fruit_orchard_throughput_add_desc:2 "Bônus ou penalidade à produção e insumo de $building_fruit_orchard$"
   modifier_building_wool_farms_throughput_add:2 "[concept_throughput] de $building_wool_farms$"
   modifier_building_wool_farms_throughput_add_desc:2 "Bônus ou penalidade à produção e insumo de $building_wool_farms$"
+  building_group_bg_hardwood_logging_throughput_add:2 "[concept_throughput] de $building_hardwood_logging_camp$"
+  building_group_bg_hardwood_logging_throughput_add_desc:2 "Bônus ou penalidade à produção e insumo de $building_hardwood_logging_camp$"
