--- a/localization/l_english.yml
+++ b/localization/l_english.yml
@@ -62,3 +62,5 @@
   modifier_building_fruit_orchard_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_fruit_orchard$"
   modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$ building [concept_throughput]"
   modifier_building_wool_farms_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_wool_farms$"
+  building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$ [concept_throughput]"
+  building_group_bg_hardwood_logging_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_hardwood_logging_camp$"
