--- a/localization/l_french.yml
+++ b/localization/l_french.yml
@@ -62,3 +62,5 @@
   modifier_building_fruit_orchard_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_fruit_orchard$"
   modifier_building_wool_farms_throughput_add:2 "[concept_throughput] des $building_wool_farms$"
   modifier_building_wool_farms_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_wool_farms$"
+  building_group_bg_hardwood_logging_throughput_add:2 "[concept_throughput] des $building_hardwood_logging_camp$"
+  building_group_bg_hardwood_logging_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_hardwood_logging_camp$"
