--- a/localization/l_german.yml
+++ b/localization/l_german.yml
@@ -62,3 +62,5 @@
   modifier_building_fruit_orchard_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_fruit_orchard$"
   modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$-[concept_throughput]"
   modifier_building_wool_farms_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_wool_farms$"
+  building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$-[concept_throughput]"
+  building_group_bg_hardwood_logging_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_hardwood_logging_camp$"
