--- a/localization/l_japanese.yml
+++ b/localization/l_japanese.yml
@@ -62,3 +62,5 @@
   modifier_building_fruit_orchard_throughput_add_desc:2 "$building_fruit_orchard$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
   modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$ [concept_throughput]"
   modifier_building_wool_farms_throughput_add_desc:2 "$building_wool_farms$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
+  building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$ [concept_throughput]"
+  building_group_bg_hardwood_logging_throughput_add_desc:2 "$building_hardwood_logging_camp$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
