--- a/localization/l_korean.yml
+++ b/localization/l_korean.yml
@@ -62,3 +62,5 @@
   modifier_building_fruit_orchard_throughput_add_desc:2 "$building_fruit_orchard$의 투입량과 산출량에 대한 보너스 또는 불이익"
   modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$ [concept_throughput]"
   modifier_building_wool_farms_throughput_add_desc:2 "$building_wool_farms$의 투입량과 산출량에 대한 보너스 또는 불이익"
+  building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$ [concept_throughput]"
+  building_group_bg_hardwood_logging_throughput_add_desc:2 "$building_hardwood_logging_camp$의 투입량과 산출량에 대한 보너스 또는 불이익"
