--- a/localization/l_polish.yml
+++ b/localization/l_polish.yml
@@ -62,3 +62,5 @@
   modifier_building_fruit_orchard_throughput_add_desc:2 $building_fruit_orchard$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
   modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$ – [concept_throughput|l]"
   modifier_building_wool_farms_throughput_add_desc:2 $building_wool_farms$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
+  building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$ - [concept_throughput|l]"
+  building_group_bg_hardwood_logging_throughput_add_desc:2 "$building_hardwood_logging_camp$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
