--- a/localization/l_simp_chinese.yml
+++ b/localization/l_simp_chinese.yml
@@ -62,3 +62,5 @@
   modifier_building_fruit_orchard_throughput_add_desc:2 "对$building_fruit_orchard$投入和产出的增益或惩罚"
   modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$[concept_throughput]"
   modifier_building_wool_farms_throughput_add_desc:2 "对$building_wool_farms$投入和产出的增益或惩罚"
+  building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$ [concept_throughput]"
+  building_group_bg_hardwood_logging_throughput_add_desc:2 "对$building_hardwood_logging_camp$投入和产出的增益或惩罚"
