--- a/localization/l_turkish.yml
+++ b/localization/l_turkish.yml
@@ -62,3 +62,5 @@
   modifier_building_fruit_orchard_throughput_add_desc:2 "$building_fruit_orchard$in hammadde ve ürününde bir bonus veya ceza"
   modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$ın [concept_throughput]"
   modifier_building_wool_farms_throughput_add_desc:2 "$building_wool_farms$in hammadde ve ürününde bir bonus veya ceza"
+  building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$ın [concept_throughput]"
+  building_group_bg_hardwood_logging_throughput_add_desc:2 "$building_hardwood_logging_camp$in hammadde ve ürününde bir bonus veya ceza"
