Updates to French localization

--- a/localization/l_french.yml
+++ b/localization/l_french.yml
@@ -1,23 +1,22 @@
-﻿l_french:
-  building_distillery:1 "Distillerie"
-  building_tailoring_workshops:1 "Atelier de Vêtements de Haute Couture"
-  building_luxury_furniture_manufacturies:1 "Manufactures de Meubles de Luxe"
-  building_pottery_mills:1 "Usines de Poterie"
-  building_rayon_plants:1 "Usines de Rayonne"
-  building_automobile_factories:1 "Usines Automobiles"
-  building_aircraft_industry:1 "Industrie Aéronautique"
-  building_radio_industry:1 "Industrie Radio"
-  building_fruit_orchard:1 "Verger de Fruits"
-  building_wool_farms:1 "Fermes de Laine"
+﻿l_french: building_distillery:1 "Distilleries"
+  building_tailoring_workshops:1 "Ateliers de Haute Couture"
+  building_luxury_furniture_manufacturies:1 "Manufactures de meubles de luxe"
+  building_pottery_mills:1 "Faïenceries"
+  building_rayon_plants:1 "Soieries synthétiques"
+  building_automobile_factories:1 "Usines automobiles"
+  building_aircraft_industry:1 "Industrie aéronautique"
+  building_radio_industry:1 "Industrie de la Radio"
+  building_fruit_orchard:1 "Arbres fruitiers"
+  building_wool_farms:1 "Fermes textiles"
   building_hardwood_logging_camp:1 "Camps de Débardage de Bois Dur"
-  building_synthetic_rubber_plants:1 "Usines de Caoutchouc Synthétique"
-  building_synthetic_fuel_plants:1 "Usines de Carburant Synthétique"
+  building_synthetic_rubber_plants:1 "Usines de Caoutchouc synthétique"
+  building_synthetic_fuel_plants:1 "Usines de Carburant synthétique"
   pm_rum:1 "Rhum"
   pm_vodka:1 "Alcool de Céréales"
   pm_hand_shearing:1 "Tonte à la Main"
   pm_specialized_shears:1 "Ciseaux Spécialisés"
   pm_electric_shears:1 "Ciseaux Électriques"
-  pm_synthetic_rubber:1 "Caoutchouc Synthétique"
+  pm_synthetic_rubber:1 "Caoutchouc synthétique"
   pm_fischer_tropsch:1 "Procédé Fischer-Tropsch"
   pm_simple_forestry_hardwood:2 "$pm_simple_forestry$"
   pm_saw_mills_hardwood:2 "$pm_saw_mills$"
