Ready for game version 1.9.1

--- a/localization/ir_l_english.yml
+++ b/localization/ir_l_english.yml
@@ -11,6 +11,7 @@
   building_hardwood_logging_camp:1 "Hardwood Logging Camps"
   building_synthetic_rubber_plants:1 "Synthetic Rubber Plants"
   building_synthetic_fuel_plants:1 "Synthetic Fuel Plants"
+  building_war_machine_industry:1 "War Machine Industry"
   pm_rum:1 "Rum"
   pm_vodka:1 "Grain Alcohol"
   pm_hand_shearing:1 "Hand Shearing"
@@ -32,6 +33,8 @@
   pm_handcrafted_furniture_luxury:2 "$pm_handcrafted_furniture$"
   pm_lathe_luxury:2 "$pm_lathe$"
   pm_mechanized_workshops_luxury:2 "$pm_mechanized_workshops$"
+  pm_assembly_lines_building_war_machine_industry:2 "$pm_assembly_lines_building_automotive_industry$"
+  pm_assembly_lines_building_aircraft_industry:2 "$pm_assembly_lines_building_automotive_industry$"
   pmg_base_building_distillery:2 "$pm_base$"
   pmg_base_building_fruit_orchard:2 "$pm_base$"
   pmg_base_building_wool_farms:2 "$pm_base$"
@@ -40,6 +43,8 @@
   pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
   pmg_synthetic_rubber:2 "$pm_base$"
   pmg_synthetic_fuel:2 "$pm_base$"
+  pmg_automation_building_war_machine_industry:2 "$pm_base$"
+  pmg_automation_building_aircraft_industry:2 "$pm_base$"
   modifier_building_distillery_throughput_add:2 "$building_distillery$ building [concept_throughput]"
   modifier_building_distillery_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_distillery$"
   modifier_building_tailoring_workshops_throughput_add:2 "$building_tailoring_workshops$ building [concept_throughput]"
@@ -60,3 +65,5 @@
   modifier_building_wool_farms_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_wool_farms$"
   building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$ [concept_throughput]"
   building_group_bg_hardwood_logging_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_hardwood_logging_camp$"
+  goods_output_wood_mult:0 "Building @wood! Wood output"
+  goods_output_wood_mult_desc:0 "A bonus or penalty to the amount of @wood! Wood produced by buildings"
