--- a/localization/ir_l_english.yml
+++ b/localization/ir_l_english.yml
@@ -1,5 +1,4 @@
-﻿l_english:
-  building_distillery:1 "Distillery"
+﻿l_english: building_distillery:1 "Distillery"
   building_tailoring_workshops:1 "Tailoring Workshop"
   building_luxury_furniture_manufacturies:1 "Luxury Furniture Manufactories"
   building_pottery_mills:1 "Pottery Mills"
@@ -65,5 +64,3 @@
   modifier_building_wool_farms_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_wool_farms$"
   building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$ [concept_throughput]"
   building_group_bg_hardwood_logging_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_hardwood_logging_camp$"
-  goods_output_wood_mult:0 "Building @wood! Wood output"
-  goods_output_wood_mult_desc:0 "A bonus or penalty to the amount of @wood! Wood produced by buildings"
