Update for 1.12 attempt 1

--- a/localization/english/replace/ir_l_braz_por.yml
+++ b/localization/english/replace/ir_l_braz_por.yml
@@ -1,3 +1,2 @@
-﻿l_braz_por:
-  building_electrics_industry:1 "Indústria de Telefones"
-  building_synthetics_plants:1 "Fábricas de Corantes"
+﻿l_braz_por: building_electrics_industry:1 "Indústria de Telefones"
+  building_synthetics_plant:1 "Fábricas de Corantes"
