--- a/localization/english/replace/ir_l_german.yml
+++ b/localization/english/replace/ir_l_german.yml
@@ -1,3 +1,2 @@
-﻿l_german:
-  building_electrics_industry:1 "Telefonindustrie"
-  building_synthetics_plants:1 "Färbemittelwerke"
+﻿l_german: building_electrics_industry:1 "Telefonindustrie"
+  building_synthetics_plant:1 "Färbemittelwerke"
