--- a/localization/english/replace/ir_l_polish.yml
+++ b/localization/english/replace/ir_l_polish.yml
@@ -1,3 +1,2 @@
-﻿l_polish:
-  building_electrics_industry:1 "Przemysł telekomunikacyjny"
-  building_synthetics_plants:1 "Zakłady Barwników"
+﻿l_polish: building_electrics_industry:1 "Przemysł telekomunikacyjny"
+  building_synthetics_plant:1 "Zakłady Barwników"
