--- a/localization/english/replace/ir_l_spanish.yml
+++ b/localization/english/replace/ir_l_spanish.yml
@@ -1,3 +1,2 @@
-﻿l_spanish:
-  building_electrics_industry:1 "Industria Telefónica"
-  building_synthetics_plants:1 "Fábricas de Tintes"
+﻿l_spanish: building_electrics_industry:1 "Industria Telefónica"
+  building_synthetics_plant:1 "Fábricas de Tintes"
