--- a/localization/ir_l_turkish.yml
+++ b/localization/ir_l_turkish.yml
@@ -1,16 +1,15 @@
-﻿l_turkish:
-  building_distillery:1 "Damıtma Tesisi"
-  building_tailoring_workshops:1 "Kaliteli Giysi Atölyesi"
-  building_luxury_furniture_manufacturies:1 "Lüks Mobilya Üretim Fabrikaları"
-  building_pottery_mills:1 "Seramik Fabrikaları"
-  building_rayon_plants:1 "Reyon Fabrikaları"
+﻿l_turkish: building_distillery:1 "Damıtma Tesisi"
+  building_tailoring_workshop:1 "Kaliteli Giysi Atölyesi"
+  building_luxury_furniture_manufactory:1 "Lüks Mobilya Üretim Fabrikaları"
+  building_pottery_mill:1 "Seramik Fabrikaları"
+  building_rayon_plant:1 "Reyon Fabrikaları"
   building_aircraft_industry:1 "Havacılık Endüstrisi"
   building_radio_industry:1 "Radyo Endüstrisi"
   building_fruit_orchard:1 "Meyve Bahçesi"
-  building_wool_farms:1 "Yün Çiftlikleri"
+  building_wool_farm:1 "Yün Çiftlikleri"
   building_hardwood_logging_camp:1 "Sert Ahşap Kesme Kampları"
-  building_synthetic_rubber_plants:1 "Sentetik Kauçuk Fabrikaları"
-  building_synthetic_fuel_plants:1 "Sentetik Yakıt Fabrikaları"
+  building_synthetic_rubber_plant:1 "Sentetik Kauçuk Fabrikaları"
+  building_synthetic_fuel_plant:1 "Sentetik Yakıt Fabrikaları"
   pm_rum:1 "Rom"
   pm_vodka:1 "Tahıl Alkolü"
   pm_hand_shearing:1 "Elle Tıraş"
@@ -34,7 +33,7 @@
   pm_mechanized_workshops_luxury:2 "$pm_mechanized_workshops$"
   pmg_base_building_distillery:2 "$pm_base$"
   pmg_base_building_fruit_orchard:2 "$pm_base$"
-  pmg_base_building_wool_farms:2 "$pm_base$"
+  pmg_base_building_wool_farm:2 "$pm_base$"
   pmg_base_building_hardwood_logging_camp:2 "$pm_base$"
   pmg_base_building_distillery_type:1 "$pm_base$"
   pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
@@ -42,21 +41,21 @@
   pmg_synthetic_fuel:2 "$pm_base$"
   modifier_building_distillery_throughput_add:2 "$building_distillery$ın [concept_throughput]"
   modifier_building_distillery_throughput_add_desc:2 "$building_distillery$in hammadde ve ürününde bir bonus veya ceza"
-  modifier_building_tailoring_workshops_throughput_add:2 "$building_tailoring_workshops$ın [concept_throughput]"
-  modifier_building_tailoring_workshops_throughput_add_desc:2 "$building_tailoring_workshops$in hammadde ve ürününde bir bonus veya ceza"
-  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "$building_luxury_furniture_manufacturies$ın [concept_throughput]"
-  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 "$building_luxury_furniture_manufacturies$in hammadde ve ürününde bir bonus veya ceza"
-  modifier_building_pottery_mills_throughput_add:2 "$building_pottery_mills$ın [concept_throughput]"
-  modifier_building_pottery_mills_throughput_add_desc:2 "$building_pottery_mills$in hammadde ve ürününde bir bonus veya ceza"
-  modifier_building_rayon_plants_throughput_add:2 "$building_rayon_plants$ın [concept_throughput]"
-  modifier_building_rayon_plants_throughput_add_desc:2 "$building_rayon_plants$in hammadde ve ürününde bir bonus veya ceza"
+  modifier_building_tailoring_workshop_throughput_add:2 "$building_tailoring_workshop$ın [concept_throughput]"
+  modifier_building_tailoring_workshop_throughput_add_desc:2 "$building_tailoring_workshop$in hammadde ve ürününde bir bonus veya ceza"
+  modifier_building_luxury_furniture_manufactory_throughput_add:2 "$building_luxury_furniture_manufactory$ın [concept_throughput]"
+  modifier_building_luxury_furniture_manufactory_throughput_add_desc:2 "$building_luxury_furniture_manufactory$in hammadde ve ürününde bir bonus veya ceza"
+  modifier_building_pottery_mill_throughput_add:2 "$building_pottery_mill$ın [concept_throughput]"
+  modifier_building_pottery_mill_throughput_add_desc:2 "$building_pottery_mill$in hammadde ve ürününde bir bonus veya ceza"
+  modifier_building_rayon_plant_throughput_add:2 "$building_rayon_plant$ın [concept_throughput]"
+  modifier_building_rayon_plant_throughput_add_desc:2 "$building_rayon_plant$in hammadde ve ürününde bir bonus veya ceza"
   modifier_building_aircraft_industry_throughput_add:2 "$building_aircraft_industry$ın [concept_throughput]"
   modifier_building_aircraft_industry_throughput_add_desc:2 "$building_aircraft_industry$in hammadde ve ürününde bir bonus veya ceza"
   modifier_building_radio_industry_throughput_add:2 "$building_radio_industry$ın [concept_throughput]"
   modifier_building_radio_industry_throughput_add_desc:2 "$building_radio_industry$in hammadde ve ürününde bir bonus veya ceza"
   modifier_building_fruit_orchard_throughput_add:2 "$building_fruit_orchard$ın [concept_throughput]"
   modifier_building_fruit_orchard_throughput_add_desc:2 "$building_fruit_orchard$in hammadde ve ürününde bir bonus veya ceza"
-  modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$ın [concept_throughput]"
-  modifier_building_wool_farms_throughput_add_desc:2 "$building_wool_farms$in hammadde ve ürününde bir bonus veya ceza"
+  modifier_building_wool_farm_throughput_add:2 "$building_wool_farm$ın [concept_throughput]"
+  modifier_building_wool_farm_throughput_add_desc:2 "$building_wool_farm$in hammadde ve ürününde bir bonus veya ceza"
   building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$ın [concept_throughput]"
   building_group_bg_hardwood_logging_throughput_add_desc:2 "$building_hardwood_logging_camp$in hammadde ve ürününde bir bonus veya ceza"
