--- a/localization/english/replace/ir_l_japanese.yml
+++ b/localization/english/replace/ir_l_japanese.yml
@@ -1,3 +1,2 @@
-﻿l_japanese:
-  building_electrics_industry:1 "電話産業"
-  building_synthetics_plants:1 "染料工場"
+﻿l_japanese: building_electrics_industry:1 "電話産業"
+  building_synthetics_plant:1 "染料工場"
