--- a/localization/english/replace/ir_l_turkish.yml
+++ b/localization/english/replace/ir_l_turkish.yml
@@ -1,3 +1,2 @@
-﻿l_turkish:
-  building_electrics_industry:1 "Telefon Endüstrisi"
-  building_synthetics_plants:1 "Boya Fabrikaları"
+﻿l_turkish: building_electrics_industry:1 "Telefon Endüstrisi"
+  building_synthetics_plant:1 "Boya Fabrikaları"
