--- a/localization/ir_l_english.yml
+++ b/localization/ir_l_english.yml
@@ -1,16 +1,15 @@
-﻿l_english:
-  building_distillery:1 "Distillery"
-  building_tailoring_workshops:1 "Tailoring Workshop"
-  building_luxury_furniture_manufacturies:1 "Luxury Furniture Manufactories"
-  building_pottery_mills:1 "Pottery Mills"
-  building_rayon_plants:1 "Rayon Plants"
+﻿l_english: building_distillery:1 "Distillery"
+  building_tailoring_workshop:1 "Tailoring Workshop"
+  building_luxury_furniture_manufactory:1 "Luxury Furniture Manufactories"
+  building_pottery_mill:1 "Pottery Mills"
+  building_rayon_plant:1 "Rayon Plants"
   building_aircraft_industry:1 "Aircraft Industry"
   building_radio_industry:1 "Radio Industry"
   building_fruit_orchard:1 "Fruit Orchard"
-  building_wool_farms:1 "Wool Farms"
+  building_wool_farm:1 "Wool Farms"
   building_hardwood_logging_camp:1 "Hardwood Logging Camps"
-  building_synthetic_rubber_plants:1 "Synthetic Rubber Plants"
-  building_synthetic_fuel_plants:1 "Synthetic Fuel Plants"
+  building_synthetic_rubber_plant:1 "Synthetic Rubber Plants"
+  building_synthetic_fuel_plant:1 "Synthetic Fuel Plants"
   building_war_machine_industry:1 "War Machine Industry"
   pm_rum:1 "Rum"
   pm_vodka:1 "Grain Alcohol"
@@ -37,7 +36,7 @@
   pm_assembly_lines_building_aircraft_industry:2 "$pm_assembly_lines_building_automotive_industry$"
   pmg_base_building_distillery:2 "$pm_base$"
   pmg_base_building_fruit_orchard:2 "$pm_base$"
-  pmg_base_building_wool_farms:2 "$pm_base$"
+  pmg_base_building_wool_farm:2 "$pm_base$"
   pmg_base_building_hardwood_logging_camp:2 "$pm_base$"
   pmg_base_building_distillery_type:1 "$pm_base$"
   pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
@@ -47,21 +46,21 @@
   pmg_automation_building_aircraft_industry:2 "$pm_base$"
   modifier_building_distillery_throughput_add:2 "$building_distillery$ building [concept_throughput]"
   modifier_building_distillery_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_distillery$"
-  modifier_building_tailoring_workshops_throughput_add:2 "$building_tailoring_workshops$ building [concept_throughput]"
-  modifier_building_tailoring_workshops_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_tailoring_workshops$"
-  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "$building_luxury_furniture_manufacturies$ building [concept_throughput]"
-  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_luxury_furniture_manufacturies$"
-  modifier_building_pottery_mills_throughput_add:2 "$building_pottery_mills$ building [concept_throughput]"
-  modifier_building_pottery_mills_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_pottery_mills$"
-  modifier_building_rayon_plants_throughput_add:2 "$building_rayon_plants$ building [concept_throughput]"
-  modifier_building_rayon_plants_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_rayon_plants$"
+  modifier_building_tailoring_workshop_throughput_add:2 "$building_tailoring_workshop$ building [concept_throughput]"
+  modifier_building_tailoring_workshop_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_tailoring_workshop$"
+  modifier_building_luxury_furniture_manufactory_throughput_add:2 "$building_luxury_furniture_manufactory$ building [concept_throughput]"
+  modifier_building_luxury_furniture_manufactory_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_luxury_furniture_manufactory$"
+  modifier_building_pottery_mill_throughput_add:2 "$building_pottery_mill$ building [concept_throughput]"
+  modifier_building_pottery_mill_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_pottery_mill$"
+  modifier_building_rayon_plant_throughput_add:2 "$building_rayon_plant$ building [concept_throughput]"
+  modifier_building_rayon_plant_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_rayon_plant$"
   modifier_building_aircraft_industry_throughput_add:2 "$building_aircraft_industry$ building [concept_throughput]"
   modifier_building_aircraft_industry_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_aircraft_industry$"
   modifier_building_radio_industry_throughput_add:2 "$building_radio_industry$ building [concept_throughput]"
   modifier_building_radio_industry_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_radio_industry$"
   modifier_building_fruit_orchard_throughput_add:2 "$building_fruit_orchard$ building [concept_throughput]"
   modifier_building_fruit_orchard_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_fruit_orchard$"
-  modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$ building [concept_throughput]"
-  modifier_building_wool_farms_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_wool_farms$"
+  modifier_building_wool_farm_throughput_add:2 "$building_wool_farm$ building [concept_throughput]"
+  modifier_building_wool_farm_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_wool_farm$"
   building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$ [concept_throughput]"
   building_group_bg_hardwood_logging_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_hardwood_logging_camp$"
