--- a/localization/ir_l_french.yml
+++ b/localization/ir_l_french.yml
@@ -1,16 +1,15 @@
-﻿l_french:
-  building_distillery:1 "Distilleries"
-  building_tailoring_workshops:1 "Ateliers de Haute Couture"
-  building_luxury_furniture_manufacturies:1 "Manufactures de meubles de luxe"
-  building_pottery_mills:1 "Faïenceries"
-  building_rayon_plants:1 "Soieries synthétiques"
+﻿l_french: building_distillery:1 "Distilleries"
+  building_tailoring_workshop:1 "Ateliers de Haute Couture"
+  building_luxury_furniture_manufactory:1 "Manufactures de meubles de luxe"
+  building_pottery_mill:1 "Faïenceries"
+  building_rayon_plant:1 "Soieries synthétiques"
   building_aircraft_industry:1 "Industrie aéronautique"
   building_radio_industry:1 "Industrie de la Radio"
   building_fruit_orchard:1 "Arbres fruitiers"
-  building_wool_farms:1 "Fermes textiles"
+  building_wool_farm:1 "Fermes textiles"
   building_hardwood_logging_camp:1 "Camps de Débardage de Bois Dur"
-  building_synthetic_rubber_plants:1 "Usines de Caoutchouc synthétique"
-  building_synthetic_fuel_plants:1 "Usines de Carburant synthétique"
+  building_synthetic_rubber_plant:1 "Usines de Caoutchouc synthétique"
+  building_synthetic_fuel_plant:1 "Usines de Carburant synthétique"
   pm_rum:1 "Rhum"
   pm_vodka:1 "Alcool de Céréales"
   pm_hand_shearing:1 "Tonte à la Main"
@@ -34,7 +33,7 @@
   pm_mechanized_workshops_luxury:2 "$pm_mechanized_workshops$"
   pmg_base_building_distillery:2 "$pm_base$"
   pmg_base_building_fruit_orchard:2 "$pm_base$"
-  pmg_base_building_wool_farms:2 "$pm_base$"
+  pmg_base_building_wool_farm:2 "$pm_base$"
   pmg_base_building_hardwood_logging_camp:2 "$pm_base$"
   pmg_base_building_distillery_type:1 "$pm_base$"
   pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
@@ -44,21 +43,21 @@
   building_distillery_throughput_add:2 "[concept_throughput] des $building_distillery$"
   modifier_building_distillery_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_distillery$"
   building_distillery_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_distillery$"
-  modifier_building_tailoring_workshops_throughput_add:2 "[concept_throughput] des $building_tailoring_workshops$"
-  modifier_building_tailoring_workshops_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_tailoring_workshops$"
-  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "[concept_throughput] des $building_luxury_furniture_manufacturies$"
-  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_luxury_furniture_manufacturies$"
-  modifier_building_pottery_mills_throughput_add:2 "[concept_throughput] des $building_pottery_mills$"
-  modifier_building_pottery_mills_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_pottery_mills$"
-  modifier_building_rayon_plants_throughput_add:2 "[concept_throughput] des $building_rayon_plants$"
-  modifier_building_rayon_plants_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_rayon_plants$"
+  modifier_building_tailoring_workshop_throughput_add:2 "[concept_throughput] des $building_tailoring_workshop$"
+  modifier_building_tailoring_workshop_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_tailoring_workshop$"
+  modifier_building_luxury_furniture_manufactory_throughput_add:2 "[concept_throughput] des $building_luxury_furniture_manufactory$"
+  modifier_building_luxury_furniture_manufactory_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_luxury_furniture_manufactory$"
+  modifier_building_pottery_mill_throughput_add:2 "[concept_throughput] des $building_pottery_mill$"
+  modifier_building_pottery_mill_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_pottery_mill$"
+  modifier_building_rayon_plant_throughput_add:2 "[concept_throughput] des $building_rayon_plant$"
+  modifier_building_rayon_plant_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_rayon_plant$"
   modifier_building_aircraft_industry_throughput_add:2 "[concept_throughput] des $building_aircraft_industry$"
   modifier_building_aircraft_industry_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_aircraft_industry$"
   modifier_building_radio_industry_throughput_add:2 "[concept_throughput] des $building_radio_industry$"
   modifier_building_radio_industry_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_radio_industry$"
   modifier_building_fruit_orchard_throughput_add:2 "[concept_throughput] des $building_fruit_orchard$"
   modifier_building_fruit_orchard_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_fruit_orchard$"
-  modifier_building_wool_farms_throughput_add:2 "[concept_throughput] des $building_wool_farms$"
-  modifier_building_wool_farms_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_wool_farms$"
+  modifier_building_wool_farm_throughput_add:2 "[concept_throughput] des $building_wool_farm$"
+  modifier_building_wool_farm_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_wool_farm$"
   building_group_bg_hardwood_logging_throughput_add:2 "[concept_throughput] des $building_hardwood_logging_camp$"
   building_group_bg_hardwood_logging_throughput_add_desc:2 "Un bonus ou une pénalité à la consommation et à la production des $building_hardwood_logging_camp$"
