--- a/localization/ir_l_german.yml
+++ b/localization/ir_l_german.yml
@@ -1,16 +1,15 @@
-﻿l_german:
-  building_distillery:1 "Brennerei"
-  building_tailoring_workshops:1 "Feine Bekleidungswerkstatt"
-  building_luxury_furniture_manufacturies:1 "Luxusmöbelfabriken"
-  building_pottery_mills:1 "Töpfereien"
-  building_rayon_plants:1 "Rayonfabriken"
+﻿l_german: building_distillery:1 "Brennerei"
+  building_tailoring_workshop:1 "Feine Bekleidungswerkstatt"
+  building_luxury_furniture_manufactory:1 "Luxusmöbelfabriken"
+  building_pottery_mill:1 "Töpfereien"
+  building_rayon_plant:1 "Rayonfabriken"
   building_aircraft_industry:1 "Luftfahrtindustrie"
   building_radio_industry:1 "Rundfunkindustrie"
   building_fruit_orchard:1 "Obstgarten"
-  building_wool_farms:1 "Wollfarmen"
+  building_wool_farm:1 "Wollfarmen"
   building_hardwood_logging_camp:1 "Hartholz-Holzfällerlager"
-  building_synthetic_rubber_plants:1 "Synthesekautschukfabriken"
-  building_synthetic_fuel_plants:1 "Synthetische Treibstofffabriken"
+  building_synthetic_rubber_plant:1 "Synthesekautschukfabriken"
+  building_synthetic_fuel_plant:1 "Synthetische Treibstofffabriken"
   pm_rum:1 "Rum"
   pm_vodka:1 "Getreidealkohol"
   pm_hand_shearing:1 "Hand Scheren"
@@ -34,7 +33,7 @@
   pm_mechanized_workshops_luxury:2 "$pm_mechanized_workshops$"
   pmg_base_building_distillery:2 "$pm_base$"
   pmg_base_building_fruit_orchard:2 "$pm_base$"
-  pmg_base_building_wool_farms:2 "$pm_base$"
+  pmg_base_building_wool_farm:2 "$pm_base$"
   pmg_base_building_hardwood_logging_camp:2 "$pm_base$"
   pmg_base_building_distillery_type:1 "$pm_base$"
   pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
@@ -42,21 +41,21 @@
   pmg_synthetic_fuel:2 "$pm_base$"
   modifier_building_distillery_throughput_add:2 "$building_distillery$-[concept_throughput]"
   modifier_building_distillery_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_distillery$"
-  modifier_building_tailoring_workshops_throughput_add:2 "$building_tailoring_workshops$-[concept_throughput]"
-  modifier_building_tailoring_workshops_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_tailoring_workshops$"
-  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "$building_luxury_furniture_manufacturies$-[concept_throughput]"
-  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_luxury_furniture_manufacturies$"
-  modifier_building_pottery_mills_throughput_add:2 "$building_pottery_mills$-[concept_throughput]"
-  modifier_building_pottery_mills_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_pottery_mills$"
-  modifier_building_rayon_plants_throughput_add:2 "$building_rayon_plants$-[concept_throughput]"
-  modifier_building_rayon_plants_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_rayon_plants$"
+  modifier_building_tailoring_workshop_throughput_add:2 "$building_tailoring_workshop$-[concept_throughput]"
+  modifier_building_tailoring_workshop_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_tailoring_workshop$"
+  modifier_building_luxury_furniture_manufactory_throughput_add:2 "$building_luxury_furniture_manufactory$-[concept_throughput]"
+  modifier_building_luxury_furniture_manufactory_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_luxury_furniture_manufactory$"
+  modifier_building_pottery_mill_throughput_add:2 "$building_pottery_mill$-[concept_throughput]"
+  modifier_building_pottery_mill_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_pottery_mill$"
+  modifier_building_rayon_plant_throughput_add:2 "$building_rayon_plant$-[concept_throughput]"
+  modifier_building_rayon_plant_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_rayon_plant$"
   modifier_building_aircraft_industry_throughput_add:2 "$building_aircraft_industry$-[concept_throughput]"
   modifier_building_aircraft_industry_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_aircraft_industry$"
   modifier_building_radio_industry_throughput_add:2 "$building_radio_industry$-[concept_throughput]"
   modifier_building_radio_industry_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_radio_industry$"
   modifier_building_fruit_orchard_throughput_add:2 "$building_fruit_orchard$-[concept_throughput]"
   modifier_building_fruit_orchard_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_fruit_orchard$"
-  modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$-[concept_throughput]"
-  modifier_building_wool_farms_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_wool_farms$"
+  modifier_building_wool_farm_throughput_add:2 "$building_wool_farm$-[concept_throughput]"
+  modifier_building_wool_farm_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_wool_farm$"
   building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$-[concept_throughput]"
   building_group_bg_hardwood_logging_throughput_add_desc:2 "Ein Bonus oder Abzug sowohl auf die Zufuhr als auch auf den Ausstoß von $building_hardwood_logging_camp$"
