--- a/localization/ir_l_japanese.yml
+++ b/localization/ir_l_japanese.yml
@@ -1,16 +1,15 @@
-﻿l_japanese:
-  building_distillery:1 "蒸留所"
-  building_tailoring_workshops:1 "上質な衣類の工房"
-  building_luxury_furniture_manufacturies:1 "高級家具製造工場"
-  building_pottery_mills:1 "陶器工場"
-  building_rayon_plants:1 "レーヨン工場"
+﻿l_japanese: building_distillery:1 "蒸留所"
+  building_tailoring_workshop:1 "上質な衣類の工房"
+  building_luxury_furniture_manufactory:1 "高級家具製造工場"
+  building_pottery_mill:1 "陶器工場"
+  building_rayon_plant:1 "レーヨン工場"
   building_aircraft_industry:1 "航空産業"
   building_radio_industry:1 "ラジオ産業"
   building_fruit_orchard:1 "果樹園"
-  building_wool_farms:1 "羊毛農場"
+  building_wool_farm:1 "羊毛農場"
   building_hardwood_logging_camp:1 "硬木伐採キャンプ"
-  building_synthetic_rubber_plants:1 "合成ゴム工場"
-  building_synthetic_fuel_plants:1 "合成燃料工場"
+  building_synthetic_rubber_plant:1 "合成ゴム工場"
+  building_synthetic_fuel_plant:1 "合成燃料工場"
   pm_rum:1 "ラム酒"
   pm_vodka:1 "穀物酒"
   pm_hand_shearing:1 "手刈り"
@@ -34,7 +33,7 @@
   pm_mechanized_workshops_luxury:2 "$pm_mechanized_workshops$"
   pmg_base_building_distillery:2 "$pm_base$"
   pmg_base_building_fruit_orchard:2 "$pm_base$"
-  pmg_base_building_wool_farms:2 "$pm_base$"
+  pmg_base_building_wool_farm:2 "$pm_base$"
   pmg_base_building_hardwood_logging_camp:2 "$pm_base$"
   pmg_base_building_distillery_type:1 "$pm_base$"
   pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
@@ -42,21 +41,21 @@
   pmg_synthetic_fuel:2 "$pm_base$"
   modifier_building_distillery_throughput_add:2 "$building_distillery$ [concept_throughput]"
   modifier_building_distillery_throughput_add_desc:2 "$building_distillery$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
-  modifier_building_tailoring_workshops_throughput_add:2 "$building_tailoring_workshops$ [concept_throughput]"
-  modifier_building_tailoring_workshops_throughput_add_desc:2 "$building_tailoring_workshops$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
-  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "$building_luxury_furniture_manufacturies$ [concept_throughput]"
-  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 "$building_luxury_furniture_manufacturies$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
-  modifier_building_pottery_mills_throughput_add:2 "$building_pottery_mills$ [concept_throughput]"
-  modifier_building_pottery_mills_throughput_add_desc:2 "$building_pottery_mills$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
-  modifier_building_rayon_plants_throughput_add:2 "$building_rayon_plants$ [concept_throughput]"
-  modifier_building_rayon_plants_throughput_add_desc:2 "$building_rayon_plants$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
+  modifier_building_tailoring_workshop_throughput_add:2 "$building_tailoring_workshop$ [concept_throughput]"
+  modifier_building_tailoring_workshop_throughput_add_desc:2 "$building_tailoring_workshop$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
+  modifier_building_luxury_furniture_manufactory_throughput_add:2 "$building_luxury_furniture_manufactory$ [concept_throughput]"
+  modifier_building_luxury_furniture_manufactory_throughput_add_desc:2 "$building_luxury_furniture_manufactory$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
+  modifier_building_pottery_mill_throughput_add:2 "$building_pottery_mill$ [concept_throughput]"
+  modifier_building_pottery_mill_throughput_add_desc:2 "$building_pottery_mill$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
+  modifier_building_rayon_plant_throughput_add:2 "$building_rayon_plant$ [concept_throughput]"
+  modifier_building_rayon_plant_throughput_add_desc:2 "$building_rayon_plant$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
   modifier_building_aircraft_industry_throughput_add:2 "$building_aircraft_industry$ [concept_throughput]"
   modifier_building_aircraft_industry_throughput_add_desc:2 "$building_aircraft_industry$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
   modifier_building_radio_industry_throughput_add:2 "$building_radio_industry$ [concept_throughput]"
   modifier_building_radio_industry_throughput_add_desc:2 "$building_radio_industry$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
   modifier_building_fruit_orchard_throughput_add:2 "$building_fruit_orchard$ [concept_throughput]"
   modifier_building_fruit_orchard_throughput_add_desc:2 "$building_fruit_orchard$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
-  modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$ [concept_throughput]"
-  modifier_building_wool_farms_throughput_add_desc:2 "$building_wool_farms$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
+  modifier_building_wool_farm_throughput_add:2 "$building_wool_farm$ [concept_throughput]"
+  modifier_building_wool_farm_throughput_add_desc:2 "$building_wool_farm$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
   building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$ [concept_throughput]"
   building_group_bg_hardwood_logging_throughput_add_desc:2 "$building_hardwood_logging_camp$の施設需要と生産の両方に対するボーナスあるいはペナルティです"
