--- a/localization/ir_l_korean.yml
+++ b/localization/ir_l_korean.yml
@@ -1,16 +1,15 @@
-﻿l_korean:
-  building_distillery:1 "증류소"
-  building_tailoring_workshops:1 "고급 의류 공방"
-  building_luxury_furniture_manufacturies:1 "고급 가구 제조 공장"
-  building_pottery_mills:1 "도기 공장"
-  building_rayon_plants:1 "레이온 공장"
+﻿l_korean: building_distillery:1 "증류소"
+  building_tailoring_workshop:1 "고급 의류 공방"
+  building_luxury_furniture_manufactory:1 "고급 가구 제조 공장"
+  building_pottery_mill:1 "도기 공장"
+  building_rayon_plant:1 "레이온 공장"
   building_aircraft_industry:1 "항공 산업"
   building_radio_industry:1 "라디오 산업"
   building_fruit_orchard:1 "과수원"
-  building_wool_farms:1 "양털 농장"
+  building_wool_farm:1 "양털 농장"
   building_hardwood_logging_camp:1 "단단한 나무 벌목 캠프"
-  building_synthetic_rubber_plants:1 "합성 고무 공장"
-  building_synthetic_fuel_plants:1 "합성 연료 공장"
+  building_synthetic_rubber_plant:1 "합성 고무 공장"
+  building_synthetic_fuel_plant:1 "합성 연료 공장"
   pm_rum:1 "럼"
   pm_vodka:1 "곡물 주정"
   pm_hand_shearing:1 "손으로 깎는 것"
@@ -34,7 +33,7 @@
   pm_mechanized_workshops_luxury:2 "$pm_mechanized_workshops$"
   pmg_base_building_distillery:2 "$pm_base$"
   pmg_base_building_fruit_orchard:2 "$pm_base$"
-  pmg_base_building_wool_farms:2 "$pm_base$"
+  pmg_base_building_wool_farm:2 "$pm_base$"
   pmg_base_building_hardwood_logging_camp:2 "$pm_base$"
   pmg_base_building_distillery_type:1 "$pm_base$"
   pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
@@ -42,21 +41,21 @@
   pmg_synthetic_fuel:2 "$pm_base$"
   modifier_building_distillery_throughput_add:2 "$building_distillery$ [concept_throughput]"
   modifier_building_distillery_throughput_add_desc:2 "$building_distillery$의 투입량과 산출량에 대한 보너스 또는 불이익"
-  modifier_building_tailoring_workshops_throughput_add:2 "$building_tailoring_workshops$ [concept_throughput]"
-  modifier_building_tailoring_workshops_throughput_add_desc:2 "$building_tailoring_workshops$의 투입량과 산출량에 대한 보너스 또는 불이익"
-  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "$building_luxury_furniture_manufacturies$ [concept_throughput]"
-  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 "$building_luxury_furniture_manufacturies$의 투입량과 산출량에 대한 보너스 또는 불이익"
-  modifier_building_pottery_mills_throughput_add:2 "$building_pottery_mills$ [concept_throughput]"
-  modifier_building_pottery_mills_throughput_add_desc:2 "$building_pottery_mills$의 투입량과 산출량에 대한 보너스 또는 불이익"
-  modifier_building_rayon_plants_throughput_add:2 "$building_rayon_plants$ [concept_throughput]"
-  modifier_building_rayon_plants_throughput_add_desc:2 "$building_rayon_plants$의 투입량과 산출량에 대한 보너스 또는 불이익"
+  modifier_building_tailoring_workshop_throughput_add:2 "$building_tailoring_workshop$ [concept_throughput]"
+  modifier_building_tailoring_workshop_throughput_add_desc:2 "$building_tailoring_workshop$의 투입량과 산출량에 대한 보너스 또는 불이익"
+  modifier_building_luxury_furniture_manufactory_throughput_add:2 "$building_luxury_furniture_manufactory$ [concept_throughput]"
+  modifier_building_luxury_furniture_manufactory_throughput_add_desc:2 "$building_luxury_furniture_manufactory$의 투입량과 산출량에 대한 보너스 또는 불이익"
+  modifier_building_pottery_mill_throughput_add:2 "$building_pottery_mill$ [concept_throughput]"
+  modifier_building_pottery_mill_throughput_add_desc:2 "$building_pottery_mill$의 투입량과 산출량에 대한 보너스 또는 불이익"
+  modifier_building_rayon_plant_throughput_add:2 "$building_rayon_plant$ [concept_throughput]"
+  modifier_building_rayon_plant_throughput_add_desc:2 "$building_rayon_plant$의 투입량과 산출량에 대한 보너스 또는 불이익"
   modifier_building_aircraft_industry_throughput_add:2 "$building_aircraft_industry$ [concept_throughput]"
   modifier_building_aircraft_industry_throughput_add_desc:2 "$building_aircraft_industry$의 투입량과 산출량에 대한 보너스 또는 불이익"
   modifier_building_radio_industry_throughput_add:2 "$building_radio_industry$ [concept_throughput]"
   modifier_building_radio_industry_throughput_add_desc:2 "$building_radio_industry$의 투입량과 산출량에 대한 보너스 또는 불이익"
   modifier_building_fruit_orchard_throughput_add:2 "$building_fruit_orchard$ [concept_throughput]"
   modifier_building_fruit_orchard_throughput_add_desc:2 "$building_fruit_orchard$의 투입량과 산출량에 대한 보너스 또는 불이익"
-  modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$ [concept_throughput]"
-  modifier_building_wool_farms_throughput_add_desc:2 "$building_wool_farms$의 투입량과 산출량에 대한 보너스 또는 불이익"
+  modifier_building_wool_farm_throughput_add:2 "$building_wool_farm$ [concept_throughput]"
+  modifier_building_wool_farm_throughput_add_desc:2 "$building_wool_farm$의 투입량과 산출량에 대한 보너스 또는 불이익"
   building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$ [concept_throughput]"
   building_group_bg_hardwood_logging_throughput_add_desc:2 "$building_hardwood_logging_camp$의 투입량과 산출량에 대한 보너스 또는 불이익"
