--- a/localization/ir_l_polish.yml
+++ b/localization/ir_l_polish.yml
@@ -1,16 +1,15 @@
-﻿l_polish:
-  building_distillery:1 "Destylarnia"
-  building_tailoring_workshops:1 "Warsztat eleganckich ubrań"
-  building_luxury_furniture_manufacturies:1 "Manufaktury Mebli Luksusowych"
-  building_pottery_mills:1 "Fabryki Ceramiki"
-  building_rayon_plants:1 "Zakłady Rayonowe"
+﻿l_polish: building_distillery:1 "Destylarnia"
+  building_tailoring_workshop:1 "Warsztat eleganckich ubrań"
+  building_luxury_furniture_manufactory:1 "Manufaktury Mebli Luksusowych"
+  building_pottery_mill:1 "Fabryki Ceramiki"
+  building_rayon_plant:1 "Zakłady Rayonowe"
   building_aircraft_industry:1 "Przemysł lotniczy"
   building_radio_industry:1 "Przemysł radiowy"
   building_fruit_orchard:1 "Sad owocowy"
-  building_wool_farms:1 "Farma Wełny"
+  building_wool_farm:1 "Farma Wełny"
   building_hardwood_logging_camp:1 "Obozy Wydobycia Twardego Drewna"
-  building_synthetic_rubber_plants:1 "Fabryki Gumy Syntetycznej"
-  building_synthetic_fuel_plants:1 "Fabryki Paliw Syntetycznych"
+  building_synthetic_rubber_plant:1 "Fabryki Gumy Syntetycznej"
+  building_synthetic_fuel_plant:1 "Fabryki Paliw Syntetycznych"
   pm_rum:1 "Rum"
   pm_vodka:1 "Alkohol z Zboża"
   pm_hand_shearing:1 "Strzyżenie Ręczne"
@@ -34,7 +33,7 @@
   pm_mechanized_workshops_luxury:2 "$pm_mechanized_workshops$"
   pmg_base_building_distillery:2 "$pm_base$"
   pmg_base_building_fruit_orchard:2 "$pm_base$"
-  pmg_base_building_wool_farms:2 "$pm_base$"
+  pmg_base_building_wool_farm:2 "$pm_base$"
   pmg_base_building_hardwood_logging_camp:2 "$pm_base$"
   pmg_base_building_distillery_type:1 "$pm_base$"
   pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
@@ -42,21 +41,21 @@
   pmg_synthetic_fuel:2 "$pm_base$"
   modifier_building_distillery_throughput_add:2 "$building_distillery$ – [concept_throughput|l]"
   modifier_building_distillery_throughput_add_desc:2 $building_distillery$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
-  modifier_building_tailoring_workshops_throughput_add:2 "$building_tailoring_workshops$ – [concept_throughput|l]"
-  modifier_building_tailoring_workshops_throughput_add_desc:2 $building_tailoring_workshops$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
-  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "$building_luxury_furniture_manufacturies$ – [concept_throughput|l]"
-  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 $building_luxury_furniture_manufacturies$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
-  modifier_building_pottery_mills_throughput_add:2 "$building_pottery_mills$ – [concept_throughput|l]"
-  modifier_building_pottery_mills_throughput_add_desc:2 $building_pottery_mills$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
-  modifier_building_rayon_plants_throughput_add:2 "$building_rayon_plants$ – [concept_throughput|l]"
-  modifier_building_rayon_plants_throughput_add_desc:2 $building_rayon_plants$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
+  modifier_building_tailoring_workshop_throughput_add:2 "$building_tailoring_workshop$ – [concept_throughput|l]"
+  modifier_building_tailoring_workshop_throughput_add_desc:2 $building_tailoring_workshop$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
+  modifier_building_luxury_furniture_manufactory_throughput_add:2 "$building_luxury_furniture_manufactory$ – [concept_throughput|l]"
+  modifier_building_luxury_furniture_manufactory_throughput_add_desc:2 $building_luxury_furniture_manufactory$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
+  modifier_building_pottery_mill_throughput_add:2 "$building_pottery_mill$ – [concept_throughput|l]"
+  modifier_building_pottery_mill_throughput_add_desc:2 $building_pottery_mill$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
+  modifier_building_rayon_plant_throughput_add:2 "$building_rayon_plant$ – [concept_throughput|l]"
+  modifier_building_rayon_plant_throughput_add_desc:2 $building_rayon_plant$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
   modifier_building_aircraft_industry_throughput_add:2 "$building_aircraft_industry$ – [concept_throughput|l]"
   modifier_building_aircraft_industry_throughput_add_desc:2 $building_aircraft_industry$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
   modifier_building_radio_industry_throughput_add:2 "$building_radio_industry$ – [concept_throughput|l]"
   modifier_building_radio_industry_throughput_add_desc:2 $building_radio_industry$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
   modifier_building_fruit_orchard_throughput_add:2 "$building_fruit_orchard$ – [concept_throughput|l]"
   modifier_building_fruit_orchard_throughput_add_desc:2 $building_fruit_orchard$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
-  modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$ – [concept_throughput|l]"
-  modifier_building_wool_farms_throughput_add_desc:2 $building_wool_farms$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
+  modifier_building_wool_farm_throughput_add:2 "$building_wool_farm$ – [concept_throughput|l]"
+  modifier_building_wool_farm_throughput_add_desc:2 $building_wool_farm$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
   building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$ - [concept_throughput|l]"
   building_group_bg_hardwood_logging_throughput_add_desc:2 "$building_hardwood_logging_camp$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
