--- a/localization/ir_l_russian.yml
+++ b/localization/ir_l_russian.yml
@@ -1,16 +1,15 @@
-﻿l_russian:
-  building_distillery:1 "Дистиллерия"
-  building_tailoring_workshops:1 "Мастерская изысканной одежды"
-  building_luxury_furniture_manufacturies:1 "Мануфактуры роскошной мебели"
-  building_pottery_mills:1 "Фарфоровые заводы"
-  building_rayon_plants:1 "Заводы реоновой пряжи"
+﻿l_russian: building_distillery:1 "Дистиллерия"
+  building_tailoring_workshop:1 "Мастерская изысканной одежды"
+  building_luxury_furniture_manufactory:1 "Мануфактуры роскошной мебели"
+  building_pottery_mill:1 "Фарфоровые заводы"
+  building_rayon_plant:1 "Заводы реоновой пряжи"
   building_aircraft_industry:1 "Авиационная промышленность"
   building_radio_industry:1 "Радиопромышленность"
   building_fruit_orchard:1 "Фруктовый сад"
-  building_wool_farms:1 "Шерстяные фермы"
+  building_wool_farm:1 "Шерстяные фермы"
   building_hardwood_logging_camp:1 "Лесозаготовительные лагеря для твердых пород деревьев"
-  building_synthetic_rubber_plants:1 "Фабрики синтетического каучука"
-  building_synthetic_fuel_plants:1 "Фабрики синтетического топлива"
+  building_synthetic_rubber_plant:1 "Фабрики синтетического каучука"
+  building_synthetic_fuel_plant:1 "Фабрики синтетического топлива"
   pm_rum:1 "Ром"
   pm_vodka:1 "Зерновой спирт"
   pm_hand_shearing:1 "Ручное стрижение"
@@ -34,7 +33,7 @@
   pm_mechanized_workshops_luxury:2 "$pm_mechanized_workshops$"
   pmg_base_building_distillery:2 "$pm_base$"
   pmg_base_building_fruit_orchard:2 "$pm_base$"
-  pmg_base_building_wool_farms:2 "$pm_base$"
+  pmg_base_building_wool_farm:2 "$pm_base$"
   pmg_base_building_hardwood_logging_camp:2 "$pm_base$"
   pmg_base_building_distillery_type:1 "$pm_base$"
   pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
@@ -42,21 +41,21 @@
   pmg_synthetic_fuel:2 "$pm_base$"
   modifier_building_distillery_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_distillery$"
   modifier_building_distillery_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_distillery$."
-  modifier_building_tailoring_workshops_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_tailoring_workshops$"
-  modifier_building_tailoring_workshops_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_tailoring_workshops$."
-  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_luxury_furniture_manufacturies$"
-  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_luxury_furniture_manufacturies$."
-  modifier_building_pottery_mills_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_pottery_mills$"
-  modifier_building_pottery_mills_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_pottery_mills$."
-  modifier_building_rayon_plants_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_rayon_plants$"
-  modifier_building_rayon_plants_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_rayon_plants$."
+  modifier_building_tailoring_workshop_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_tailoring_workshop$"
+  modifier_building_tailoring_workshop_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_tailoring_workshop$."
+  modifier_building_luxury_furniture_manufactory_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_luxury_furniture_manufactory$"
+  modifier_building_luxury_furniture_manufactory_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_luxury_furniture_manufactory$."
+  modifier_building_pottery_mill_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_pottery_mill$"
+  modifier_building_pottery_mill_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_pottery_mill$."
+  modifier_building_rayon_plant_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_rayon_plant$"
+  modifier_building_rayon_plant_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_rayon_plant$."
   modifier_building_aircraft_industry_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_aircraft_industry$"
   modifier_building_aircraft_industry_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_aircraft_industry$."
   modifier_building_radio_industry_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_radio_industry$"
   modifier_building_radio_industry_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_radio_industry$."
   modifier_building_fruit_orchard_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_fruit_orchard$"
   modifier_building_fruit_orchard_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_fruit_orchard$."
-  modifier_building_wool_farms_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_wool_farms$"
-  modifier_building_wool_farms_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_wool_farms$."
+  modifier_building_wool_farm_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_wool_farm$"
+  modifier_building_wool_farm_throughput_add_desc:2 "Бонус или штраф к потреблению и производству $building_wool_farm$."
   building_group_bg_hardwood_logging_throughput_add:2 "[Concept('concept_throughput', 'Товарооборот')] $building_hardwood_logging_camp$"
   building_group_bg_hardwood_logging_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_hardwood_logging_camp$"
