--- a/localization/ir_l_simp_chinese.yml
+++ b/localization/ir_l_simp_chinese.yml
@@ -1,16 +1,15 @@
-﻿l_simp_chinese:
-  building_distillery:1 "酿酒厂"
-  building_tailoring_workshops:1 "精品服装工作室"
-  building_luxury_furniture_manufacturies:1 "豪华家具制造厂"
-  building_pottery_mills:1 "陶瓷工厂"
-  building_rayon_plants:1 "人造丝工厂"
+﻿l_simp_chinese: building_distillery:1 "酿酒厂"
+  building_tailoring_workshop:1 "精品服装工作室"
+  building_luxury_furniture_manufactory:1 "豪华家具制造厂"
+  building_pottery_mill:1 "陶瓷工厂"
+  building_rayon_plant:1 "人造丝工厂"
   building_aircraft_industry:1 "航空工业"
   building_radio_industry:1 "无线电工业"
   building_fruit_orchard:1 "果园"
-  building_wool_farms:1 "羊毛农场"
+  building_wool_farm:1 "羊毛农场"
   building_hardwood_logging_camp:1 "硬木伐木营地"
-  building_synthetic_rubber_plants:1 "合成橡胶工厂"
-  building_synthetic_fuel_plants:1 "合成燃料工厂"
+  building_synthetic_rubber_plant:1 "合成橡胶工厂"
+  building_synthetic_fuel_plant:1 "合成燃料工厂"
   pm_rum:1 "朗姆酒"
   pm_vodka:1 "谷物酒精"
   pm_hand_shearing:1 "手工修剪"
@@ -34,7 +33,7 @@
   pm_mechanized_workshops_luxury:2 "$pm_mechanized_workshops$"
   pmg_base_building_distillery:2 "$pm_base$"
   pmg_base_building_fruit_orchard:2 "$pm_base$"
-  pmg_base_building_wool_farms:2 "$pm_base$"
+  pmg_base_building_wool_farm:2 "$pm_base$"
   pmg_base_building_hardwood_logging_camp:2 "$pm_base$"
   pmg_base_building_distillery_type:1 "$pm_base$"
   pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
@@ -42,21 +41,21 @@
   pmg_synthetic_fuel:2 "$pm_base$"
   modifier_building_distillery_throughput_add:2 "$building_distillery$[concept_throughput]"
   modifier_building_distillery_throughput_add_desc:2 "对$building_distillery$投入和产出的增益或惩罚"
-  modifier_building_tailoring_workshops_throughput_add:2 "$building_tailoring_workshops$[concept_throughput]"
-  modifier_building_tailoring_workshops_throughput_add_desc:2 "对$building_tailoring_workshops$投入和产出的增益或惩罚"
-  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "$building_luxury_furniture_manufacturies$[concept_throughput]"
-  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 "对$building_luxury_furniture_manufacturies$投入和产出的增益或惩罚"
-  modifier_building_pottery_mills_throughput_add:2 "$building_pottery_mills$[concept_throughput]"
-  modifier_building_pottery_mills_throughput_add_desc:2 "对$building_pottery_mills$投入和产出的增益或惩罚"
-  modifier_building_rayon_plants_throughput_add:2 "$building_rayon_plants$[concept_throughput]"
-  modifier_building_rayon_plants_throughput_add_desc:2 "对$building_rayon_plants$投入和产出的增益或惩罚"
+  modifier_building_tailoring_workshop_throughput_add:2 "$building_tailoring_workshop$[concept_throughput]"
+  modifier_building_tailoring_workshop_throughput_add_desc:2 "对$building_tailoring_workshop$投入和产出的增益或惩罚"
+  modifier_building_luxury_furniture_manufactory_throughput_add:2 "$building_luxury_furniture_manufactory$[concept_throughput]"
+  modifier_building_luxury_furniture_manufactory_throughput_add_desc:2 "对$building_luxury_furniture_manufactory$投入和产出的增益或惩罚"
+  modifier_building_pottery_mill_throughput_add:2 "$building_pottery_mill$[concept_throughput]"
+  modifier_building_pottery_mill_throughput_add_desc:2 "对$building_pottery_mill$投入和产出的增益或惩罚"
+  modifier_building_rayon_plant_throughput_add:2 "$building_rayon_plant$[concept_throughput]"
+  modifier_building_rayon_plant_throughput_add_desc:2 "对$building_rayon_plant$投入和产出的增益或惩罚"
   modifier_building_aircraft_industry_throughput_add:2 "$building_aircraft_industry$[concept_throughput]"
   modifier_building_aircraft_industry_throughput_add_desc:2 "对$building_aircraft_industry$投入和产出的增益或惩罚"
   modifier_building_radio_industry_throughput_add:2 "$building_radio_industry$[concept_throughput]"
   modifier_building_radio_industry_throughput_add_desc:2 "对$building_radio_industry$投入和产出的增益或惩罚"
   modifier_building_fruit_orchard_throughput_add:2 "$building_fruit_orchard$[concept_throughput]"
   modifier_building_fruit_orchard_throughput_add_desc:2 "对$building_fruit_orchard$投入和产出的增益或惩罚"
-  modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$[concept_throughput]"
-  modifier_building_wool_farms_throughput_add_desc:2 "对$building_wool_farms$投入和产出的增益或惩罚"
+  modifier_building_wool_farm_throughput_add:2 "$building_wool_farm$[concept_throughput]"
+  modifier_building_wool_farm_throughput_add_desc:2 "对$building_wool_farm$投入和产出的增益或惩罚"
   building_group_bg_hardwood_logging_throughput_add:2 "$building_hardwood_logging_camp$ [concept_throughput]"
   building_group_bg_hardwood_logging_throughput_add_desc:2 "对$building_hardwood_logging_camp$投入和产出的增益或惩罚"
