--- a/localization/ir_l_spanish.yml
+++ b/localization/ir_l_spanish.yml
@@ -1,16 +1,15 @@
-﻿l_spanish:
-  building_distillery:1 "Destilería"
-  building_tailoring_workshops:1 "Taller de Ropa de Alta Costura"
-  building_luxury_furniture_manufacturies:1 "Manufacturas de Muebles de Lujo"
-  building_pottery_mills:1 "Fábricas de Cerámica"
-  building_rayon_plants:1 "Fábricas de Rayón"
+﻿l_spanish: building_distillery:1 "Destilería"
+  building_tailoring_workshop:1 "Taller de Ropa de Alta Costura"
+  building_luxury_furniture_manufactory:1 "Manufacturas de Muebles de Lujo"
+  building_pottery_mill:1 "Fábricas de Cerámica"
+  building_rayon_plant:1 "Fábricas de Rayón"
   building_aircraft_industry:1 "Industria Aeronáutica"
   building_radio_industry:1 "Industria de la Radio"
   building_fruit_orchard:1 "Huerto de Frutas"
-  building_wool_farms:1 "Granjas de Lana"
+  building_wool_farm:1 "Granjas de Lana"
   building_hardwood_logging_camp:1 "Campamentos de Tala de Madera Dura"
-  building_synthetic_rubber_plants:1 "Fábricas de Caucho Sintético"
-  building_synthetic_fuel_plants:1 "Fábricas de Combustible Sintético"
+  building_synthetic_rubber_plant:1 "Fábricas de Caucho Sintético"
+  building_synthetic_fuel_plant:1 "Fábricas de Combustible Sintético"
   pm_rum:1 "Ron"
   pm_vodka:1 "Alcohol de Granos"
   pm_hand_shearing:1 "Esquilado a Mano"
@@ -34,7 +33,7 @@
   pm_mechanized_workshops_luxury:2 "$pm_mechanized_workshops$"
   pmg_base_building_distillery:2 "$pm_base$"
   pmg_base_building_fruit_orchard:2 "$pm_base$"
-  pmg_base_building_wool_farms:2 "$pm_base$"
+  pmg_base_building_wool_farm:2 "$pm_base$"
   pmg_base_building_hardwood_logging_camp:2 "$pm_base$"
   pmg_base_building_distillery_type:1 "$pm_base$"
   pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
@@ -42,21 +41,21 @@
   pmg_synthetic_fuel:2 "$pm_base$"
   modifier_building_distillery_throughput_add:2 "[concept_throughput] de $building_distillery$"
   modifier_building_distillery_throughput_add_desc:2 "Una bonificación o penalización tanto al insumo como al producto final de las $building_distillery$"
-  modifier_building_tailoring_workshops_throughput_add:2 "[concept_throughput] de $building_tailoring_workshops$"
-  modifier_building_tailoring_workshops_throughput_add_desc:2 "Una bonificación o penalización tanto al insumo como al producto final de las $building_tailoring_workshops$"
-  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "[concept_throughput] de $building_luxury_furniture_manufacturies$"
-  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 "Una bonificación o penalización tanto al insumo como al producto final de las $building_luxury_furniture_manufacturies$"
-  modifier_building_pottery_mills_throughput_add:2 "[concept_throughput] de $building_pottery_mills$"
-  modifier_building_pottery_mills_throughput_add_desc:2 "Una bonificación o penalización tanto al insumo como al producto final de las $building_pottery_mills$"
-  modifier_building_rayon_plants_throughput_add:2 "[concept_throughput] de $building_rayon_plants$"
-  modifier_building_rayon_plants_throughput_add_desc:2 "Una bonificación o penalización tanto al insumo como al producto final de las $building_rayon_plants$"
+  modifier_building_tailoring_workshop_throughput_add:2 "[concept_throughput] de $building_tailoring_workshop$"
+  modifier_building_tailoring_workshop_throughput_add_desc:2 "Una bonificación o penalización tanto al insumo como al producto final de las $building_tailoring_workshop$"
+  modifier_building_luxury_furniture_manufactory_throughput_add:2 "[concept_throughput] de $building_luxury_furniture_manufactory$"
+  modifier_building_luxury_furniture_manufactory_throughput_add_desc:2 "Una bonificación o penalización tanto al insumo como al producto final de las $building_luxury_furniture_manufactory$"
+  modifier_building_pottery_mill_throughput_add:2 "[concept_throughput] de $building_pottery_mill$"
+  modifier_building_pottery_mill_throughput_add_desc:2 "Una bonificación o penalización tanto al insumo como al producto final de las $building_pottery_mill$"
+  modifier_building_rayon_plant_throughput_add:2 "[concept_throughput] de $building_rayon_plant$"
+  modifier_building_rayon_plant_throughput_add_desc:2 "Una bonificación o penalización tanto al insumo como al producto final de las $building_rayon_plant$"
   modifier_building_aircraft_industry_throughput_add:2 "[concept_throughput] de $building_aircraft_industry$"
   modifier_building_aircraft_industry_throughput_add_desc:2 "Una bonificación o penalización tanto al insumo como al producto final de las $building_aircraft_industry$"
   modifier_building_radio_industry_throughput_add:2 "[concept_throughput] de $building_radio_industry$"
   modifier_building_radio_industry_throughput_add_desc:2 "Una bonificación o penalización tanto al insumo como al producto final de las $building_radio_industry$"
   modifier_building_fruit_orchard_throughput_add:2 "[concept_throughput] de $building_fruit_orchard$"
   modifier_building_fruit_orchard_throughput_add_desc:2 "Una bonificación o penalización tanto al insumo como al producto final de las $building_fruit_orchard$"
-  modifier_building_wool_farms_throughput_add:2 "[concept_throughput] de $building_wool_farms$"
-  modifier_building_wool_farms_throughput_add_desc:2 "Una bonificación o penalización tanto al insumo como al producto final de las $building_wool_farms$"
+  modifier_building_wool_farm_throughput_add:2 "[concept_throughput] de $building_wool_farm$"
+  modifier_building_wool_farm_throughput_add_desc:2 "Una bonificación o penalización tanto al insumo como al producto final de las $building_wool_farm$"
   building_group_bg_hardwood_logging_throughput_add:2 "[concept_throughput] de $building_hardwood_logging_camp$"
   building_group_bg_hardwood_logging_throughput_add_desc:2 "Una bonificación o penalización tanto al insumo como al producto final de las $building_hardwood_logging_camp$"
