Their documentation was not very good

--- a/localization/english/replace/ir_l_german.yml
+++ b/localization/english/replace/ir_l_german.yml
@@ -1,2 +1,3 @@
-﻿l_german: building_electrics_industry:1 "Telefonindustrie"
+﻿l_german:
+  building_electrics_industry:1 "Telefonindustrie"
   building_synthetics_plant:1 "Färbemittelwerke"
