--- a/localization/english/replace/ir_l_polish.yml
+++ b/localization/english/replace/ir_l_polish.yml
@@ -1,2 +1,3 @@
-﻿l_polish: building_electrics_industry:1 "Przemysł telekomunikacyjny"
+﻿l_polish:
+  building_electrics_industry:1 "Przemysł telekomunikacyjny"
   building_synthetics_plant:1 "Zakłady Barwników"
