--- a/localization/english/replace/ir_l_russian.yml
+++ b/localization/english/replace/ir_l_russian.yml
@@ -1,2 +1,3 @@
-﻿l_russian: building_electrics_industry:1 "Телефонная промышленность"
+﻿l_russian:
+  building_electrics_industry:1 "Телефонная промышленность"
   building_synthetics_plant:1 "Фабрики красителей"
