--- a/localization/english/replace/ir_l_spanish.yml
+++ b/localization/english/replace/ir_l_spanish.yml
@@ -1,2 +1,3 @@
-﻿l_spanish: building_electrics_industry:1 "Industria Telefónica"
+﻿l_spanish:
+  building_electrics_industry:1 "Industria Telefónica"
   building_synthetics_plant:1 "Fábricas de Tintes"
