--- a/localization/english/replace/ir_l_braz_por.yml
+++ b/localization/english/replace/ir_l_braz_por.yml
@@ -1,2 +1,3 @@
-﻿l_braz_por: building_electrics_industry:1 "Indústria de Telefones"
+﻿l_braz_por:
+  building_electrics_industry:1 "Indústria de Telefones"
   building_synthetics_plant:1 "Fábricas de Corantes"
