--- a/localization/english/replace/ir_l_english.yml
+++ b/localization/english/replace/ir_l_english.yml
@@ -1,2 +1,3 @@
-﻿l_english: building_electrics_industry:1 "Telephone Industry"
+﻿l_english:
+  building_electrics_industry:1 "Telephone Industry"
   building_synthetics_plant:1 "Dye Plants"
