--- a/localization/english/replace/ir_l_japanese.yml
+++ b/localization/english/replace/ir_l_japanese.yml
@@ -1,2 +1,3 @@
-﻿l_japanese: building_electrics_industry:1 "電話産業"
+﻿l_japanese:
+  building_electrics_industry:1 "電話産業"
   building_synthetics_plant:1 "染料工場"
