--- a/localization/english/replace/ir_l_korean.yml
+++ b/localization/english/replace/ir_l_korean.yml
@@ -1,2 +1,3 @@
-﻿l_korean: building_electrics_industry:1 "전화 산업"
+﻿l_korean:
+  building_electrics_industry:1 "전화 산업"
   building_synthetics_plant:1 "염색 공장"
