--- a/localization/english/replace/ir_l_simp_chinese.yml
+++ b/localization/english/replace/ir_l_simp_chinese.yml
@@ -1,2 +1,3 @@
-﻿l_simp_chinese: building_electrics_industry:1 "电话行业"
+﻿l_simp_chinese:
+  building_electrics_industry:1 "电话行业"
   building_synthetics_plant:1 "染料工厂"
