--- a/localization/english/replace/ir_l_turkish.yml
+++ b/localization/english/replace/ir_l_turkish.yml
@@ -1,2 +1,3 @@
-﻿l_turkish: building_electrics_industry:1 "Telefon Endüstrisi"
+﻿l_turkish:
+  building_electrics_industry:1 "Telefon Endüstrisi"
   building_synthetics_plant:1 "Boya Fabrikaları"
