--- a/localization/ir_l_german.yml
+++ b/localization/ir_l_german.yml
@@ -1,4 +1,5 @@
-﻿l_german: building_distillery:1 "Brennerei"
+﻿l_german:
+  building_distillery:1 "Brennerei"
   building_tailoring_workshop:1 "Feine Bekleidungswerkstatt"
   building_luxury_furniture_manufactory:1 "Luxusmöbelfabriken"
   building_pottery_mill:1 "Töpfereien"
