--- a/localization/ir_l_simp_chinese.yml
+++ b/localization/ir_l_simp_chinese.yml
@@ -1,4 +1,5 @@
-﻿l_simp_chinese: building_distillery:1 "酿酒厂"
+﻿l_simp_chinese:
+  building_distillery:1 "酿酒厂"
   building_tailoring_workshop:1 "精品服装工作室"
   building_luxury_furniture_manufactory:1 "豪华家具制造厂"
   building_pottery_mill:1 "陶瓷工厂"
